force-app/main/default/objects/CPQ_MRR_Drop_Override__c/CPQ_MRR_Drop_Override__c.object-meta.xml
<CustomObject>
    <label>MRR Drop Override</label>
    <nameField>
        <displayFormat>MDO-{0000000000}</displayFormat>
        <label>MRR Drop Override Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MRR Drop Overrides</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>