force-app/main/default/objects/CPQ_MRR_Drop_Override__c/fields/CPQ_Account__c.field-meta.xml
<CustomField>
    <fullName>CPQ_Account__c</fullName>
    <description>Identify the customer where drop has occurred</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>MRR Drop Overrides</relationshipLabel>
    <relationshipName>MRR_Drop_Overrides</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>