force-app/main/default/objects/CPQ_MRR_Drop_Override__c/fields/CPQ_Override_End_Date__c.field-meta.xml
<CustomField>
    <fullName>CPQ_Override_End_Date__c</fullName>
    <label>Override End Date</label>
    <type>Date</type>
</CustomField>