force-app/main/default/objects/CPQ_MRR_Drop_Override__c/fields/CPQ_Override_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>CPQ_Override_Start_Date__c</fullName>
    <description>Start date of requested override</description>
    <inlineHelpText>End date of requested override. If no date is provided, assume override is still on</inlineHelpText>
    <label>Override Start Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>