force-app/main/default/objects/CPQ_MRR_Drop_Override__c/fields/CPQ_Type__c.field-meta.xml
<CustomField>
    <fullName>CPQ_Type__c</fullName>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Entire Customer</fullName>
            </value>
            <value>
                <fullName>Ship To</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>