force-app/main/default/objects/CPQ_MRR_Drop_Override__c/validationRules/CPQ_Validate_End_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>CPQ_Validate_End_Date</fullName>
    <active>true</active>
    <errorConditionFormula>IF(NOT(ISBLANK(CPQ_Override_End_Date__c)) &amp;&amp;  CPQ_Override_End_Date__c &lt;  CPQ_Override_Start_Date__c, true, false)</errorConditionFormula>
    <errorDisplayField>CPQ_Override_End_Date__c</errorDisplayField>
    <errorMessage>End date must be &gt; Start Date</errorMessage>
</ValidationRule>