force-app/main/default/objects/CPQ_MRR_Drop_Override__c/validationRules/CPQ_Validate_Type.validationRule-meta.xml
<ValidationRule>
    <fullName>CPQ_Validate_Type</fullName>
    <active>true</active>
    <errorConditionFormula>IF(TEXT( CPQ_Type__c ) = &apos;Entire Customer&apos; &amp;&amp;  CPQ_Account__r.RecordType.DeveloperName != &apos;Customer_Bill_To&apos;, true,
IF(TEXT( CPQ_Type__c ) = &apos;Ship To&apos; &amp;&amp;  CPQ_Account__r.RecordType.DeveloperName != &apos;Customer_Ship_To&apos;, true, false
)
)</errorConditionFormula>
    <errorDisplayField>CPQ_Type__c</errorDisplayField>
    <errorMessage>Type must match Account Type</errorMessage>
</ValidationRule>