force-app/main/default/objects/CPQ_MRR_Drop_Override__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CPQ_Account__c</columns>
    <columns>CPQ_Type__c</columns>
    <columns>CPQ_Override_Start_Date__c</columns>
    <columns>CPQ_AccPac_Number__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>